# transbribe

./: db.sqlite3  main.py  manage.py  pyproject.toml
csv_file/: Scooter Thief Situation is Deeper Than I Thought 480P_transcript.csv  WeRecoverData Threatened To Sue Me For Exposing Their Google Maps Coordinated Abuse Network - Louis Rossmann (240p, h264)_transcript.csv  what_the_freak_did_you_say_about_me_transcript.csv
srt_files/: Scooter Thief Situation is Deeper Than I Thought 480P.srt  WeRecoverData Threatened To Sue Me For Exposing Their Google Maps Coordinated Abuse Network - Louis Rossmann (240p, h264).srt  what_the_freak_did_you_say_about_me.srt
transbribe/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
uploadPage/: admin.py  apps.py  model_run.py  models.py  urls.py  views.py
uploadPage/csv_file/: Scooter Thief Situation is Deeper Than I Thought 480P_transcript.csv  WeRecoverData Threatened To Sue Me For Exposing Their Google Maps Coordinated Abuse Network - Louis Rossmann (240p, h264)_transcript.csv  what_the_freak_did_you_say_about_me_transcript.csv
uploadPage/migrations/: 0001_initial.py  0002_rename_videos_transcribes_v_id.py
uploadPage/srt_files/: Scooter Thief Situation is Deeper Than I Thought 480P.srt  WeRecoverData Threatened To Sue Me For Exposing Their Google Maps Coordinated Abuse Network - Louis Rossmann (240p, h264).srt  what_the_freak_did_you_say_about_me.srt
uploadPage/templates/: home.html  load.html
